26 June 2018: Wouter
	- Tentative fix for permission denied on IPv6 address on FreeBSD.

21 June 2018: Wouter
	- #4108: systemd reload hang fix.
	- Fix usage printout for unbound-host, hostname has to be last
	  argument on BSDs and Windows.

19 June 2018: Wouter
	- Fix for unbound-control on Windows and set TCP socket parameters
	  more closely.
	  This fix is part of 1.7.3.
	- Windows example service.conf edited with more windows specific
	  configuration.
	- Fix windows unbound-control no cert bad file descriptor error.
	  This fix is part of 1.7.3.

18 June 2018: Wouter
	- Fix that control-use-cert: no works for 127.0.0.1 to disable certs.
	  This fix is part of 1.7.3rc2.
	- Fix unbound-checkconf for control-use-cert.
	  This fix is part of 1.7.3.

15 June 2018: Wouter
	- tag for 1.7.3rc1.
	- trunk has 1.7.4.
	- unbound-control auth_zone_reload _zone_ option rereads the zonefile.
	- unbound-control auth_zone_transfer _zone_ option starts the probe
	  sequence for a master to transfer the zone from and transfers when
	  a new zone version is available.

14 June 2018: Wouter
	- #4103: Fix that auth-zone does not insist on SOA record first in
	  file for url downloads.
	- Fix that first control-interface determines if TLS is used.  Warn
	  when IP address interfaces are used without TLS.
	- Fix nettle compile.

12 June 2018: Ralph
	- Don't count CNAME response types received during qname minimisation as
	  query restart.

12 June 2018: Wouter
	- #4102 for NSD, but for Unbound.  Named unix pipes do not use
	  certificate and key files, access can be restricted with file and
	  directory permissions.  The option control-use-cert is no longer
	  used, and ignored if found in unbound.conf.
	- Rename tls-additional-ports to tls-additional-port, because every
	  line adds one port.
	- Fix buffer size warning in unit test.
	- remade dependencies in the Makefile.

6 June 2018: Wouter
	- Patch to fix openwrt for mac os build darwin detection in configure.
