@@ -1,5 +1,7 @@
 26 June 2018: Wouter
 	- Tentative fix for permission denied on IPv6 address on FreeBSD.
+	- Fix that auth-zone master reply with current SOA serial does not
+	  stop scan of masters for an updated zone.
 
 21 June 2018: Wouter
 	- #4108: systemd reload hang fix.
